@@ -3,7 +3,7 @@ Background@SETTINGS_PANEL:
 	X:(WINDOW_RIGHT - WIDTH)/2
 	Y:(WINDOW_BOTTOM- HEIGHT)/2
 	Width:600
-	Height:351
+	Height:400
 	Children:
 		Label@SETTINGS_LABEL_TITLE:
 			Y:20
@@ -120,7 +120,7 @@ Background@SETTINGS_PANEL:
 					Text:Enable Frame Limiter
 				Checkbox@PIXELDOUBLE_CHECKBOX:
 					X:310
-					Y:105
+					Y:100
 					Width:200
 					Height:20
 					Font:Regular
@@ -143,40 +143,54 @@ Background@SETTINGS_PANEL:
 					Y:132
 					Height:25
 					Text: FPS
-				Checkbox@SHOW_SHELLMAP:
+				Checkbox@TEAM_HEALTH_COLORS_CHECKBOX:
 					X:310
 					Y:135
 					Width:200
 					Height:20
 					Font:Regular
+					Text:Team Health Colors
+				Checkbox@SHOW_SHELLMAP:
+					X:15
+					Y:170
+					Width:200
+					Height:20
+					Font:Regular
 					Text:Show Shellmap
+				Checkbox@ALWAYS_SHOW_STATUS_BARS_CHECKBOX:
+					X:310
+					Y:170
+					Width:200
+					Height:20
+					Font:Regular
+					Text:Always Show Status Bars
 				Label@VIDEO_TITLE:
-					Y:175
+					Y:225
 					Width:PARENT_RIGHT
 					Font:Bold
 					Text:Localization
 					Align:Center
 				Label@LANGUAGE_LABEL:
 					X:230 - WIDTH - 5
-					Y:194
+					Y:244
 					Width:75
 					Height:25
 					Align:Right
 					Text:Language:
 				DropDownButton@LANGUAGE_DROPDOWNBUTTON:
 					X:230
-					Y:195
+					Y:245
 					Width:200
 					Height:25
 				Label@VIDEO_DESC_A:
-					Y:215
+					Y:265
 					Width:PARENT_RIGHT
 					Height:25
 					Font:Tiny
 					Align:Center
 					Text:Language changes will be applied after the game is restarted
 				Label@VIDEO_DESC_B:
-					Y:230
+					Y:280
 					Width:PARENT_RIGHT
 					Height:25
 					Font:Tiny
@@ -243,18 +257,18 @@ Background@SETTINGS_PANEL:
 					Ticks:5
 				Label@AUDIO_DEVICE_LABEL:
 					X:190 - WIDTH - 5
-					Y:194
+					Y:244
 					Width:75
 					Height:25
 					Align:Right
 					Text:Audio Device:
 				DropDownButton@AUDIO_DEVICE:
 					X:190
-					Y:195
+					Y:245
 					Width:300
 					Height:25
 				Label@AUDIO_DEVICE_DESC:
-					Y:215
+					Y:265
 					Width:PARENT_RIGHT
 					Height:25
 					Font:Tiny
@@ -321,7 +335,7 @@ Background@SETTINGS_PANEL:
 					Y:135
 					Width:560
 					ItemSpacing:4
-					Height:110
+					Height:160
 					Children:
 						ScrollItem@HEADER:
 							BaseName:scrollheader
